--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Document</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/awesomplete.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
   rel="stylesheet">  
 </head>
@@ -13,8 +14,10 @@
   <div class="card">
     <form class="addNewForm">
       <div class="form-row">
-        <div class="form-group col-md-3">
-          <input type="text" class="form-control" placeholder="Enter currency tag e.g (BTC, ETH)">
+        <div class="form-group col-md-3" id="searchfield">
+          <form><input type="text" class="form-control biginput" id="autocomplete" placeholder="Enter currency tag e.g (BTC, ETH)"></form>
+          <datalist id="mylist">
+          </datalist>          
         </div>
         <div class="form-group col-md-3">
           <input type="text" class="form-control" placeholder="Enter a title for the card">
@@ -120,7 +123,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/jquery.tablesorter.js"></script>
-<script type="text/javascript" src="js/index.js"></script>
+<script type="text/javascript" src="build/main.bundle.js"></script>
+<!-- <script type="text/javascript" src="js/jquery.autocomplete.js"></script> -->
+<script type="text/javascript" src="js/awesomplete.js"></script>
 <script>
 $(function(){
   $(".table").tablesorter();
